# libusb

./: CMakeLists.txt  core.c  descriptor.c  hotplug.c  hotplug.h  io.c  libusb.def  libusb.h  libusbi.h  strerror.c  sync.c
msvc/: config.h  libusb_dll_2015.vcxproj
os/: darwin_usb.c  darwin_usb.h  linux_netlink.c  linux_udev.c  linux_usbfs.c  linux_usbfs.h  netbsd_usb.c  openbsd_usb.c  poll_posix.c  poll_windows.c  poll_windows.h  threads_posix.c  threads_windows.c  threads_windows.h  wince_usb.c  wince_usb.h  windows_common.h  windows_usb.c  windows_usb.h
os/haiku/: haiku_pollfs.cpp  haiku_usb.h  haiku_usb_backend.cpp  haiku_usb_raw.cpp  haiku_usb_raw.h
xcode/libusb.xcodeproj/: project.pbxproj
